[Registration] Add: store function, insert data using create and return redirect in RegisterController; [signin] Add: bootstrap js cdn; [flashing data] Add: Added flashing data using material-icons in login; [error message] Add: give feedback when error in registration;

--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -3569,6 +3569,7 @@ textarea.form-control.is-valid {
     background-repeat: no-repeat;
     background-position: right 0.75rem center;
     background-size: 1rem 1rem;
+    z-index: 9999;
 }
 
 .was-validated .form-control:invalid:focus,
